--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "andebolgest",
   "private": true,
+  "description": "",
+  "license": "",
   "sideEffects": false,
   "type": "module",
   "scripts": {
@@ -16,6 +18,7 @@
     "@remix-run/node": "^2.8.1",
     "@remix-run/react": "^2.8.1",
     "@remix-run/serve": "^2.8.1",
+    "@remix-run/vercel": "^1.19.3",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
