--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@remix-run/server-runtime": "^2.8.0",
     "@vercel/analytics": "^1.2.2",
     "@vercel/remix": "^2.8.0",
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.7.8",
     "isbot": "^4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
