--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@prisma/client": "^5.12.0",
     "@remix-run/node": "^2.8.0",
     "@remix-run/react": "^2.8.0",
     "@remix-run/server-runtime": "^2.8.0",
@@ -17,6 +18,7 @@
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.8",
     "isbot": "^4",
+    "mongodb": "^6.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -28,6 +30,7 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^8.38.0",
     "postcss": "^8.4.38",
+    "prisma": "^5.12.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
