--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "isbot": "^4",
     "mongodb": "^6.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.8.0",
